Use Vite instead of create-react-app

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,6 +1,6 @@
 $primary: #49688d;
 
-@use '~ag-grid-community/styles' as ag;
+@use 'ag-grid-community/styles' as ag;
 
 @include ag.grid-styles(
     (
